enterprise/fqdn-proxy/scripts/compat/fqdn-policy-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: client-egress-to-fqdns-external-target
  namespace: cilium-test-1
spec:
  egress:
  - toFQDNs:
    - matchName: EXTERNAL_TARGET
  - toEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: coredns
    toPorts:
    - ports:
      - port: "53"
        protocol: ANY
      rules:
        dns:
        - matchPattern: '*'
        - matchPattern: '*.-name.com'
  endpointSelector:
    matchLabels:
      any:kind: client
